website/versioned_docs/0.25/signed-apk-android.md
---
id: version-0.25-signed-apk-android
title: signed-apk-android
original_id: signed-apk-android
---
<a id="content"></a><table width="100%"><tbody><tr><td><h1><a class="anchor" name="generating-signed-apk"></a>Generating Signed APK <a class="hash-link" href="docs/signed-apk-android.html#generating-signed-apk">#</a></h1></td><td style="text-align:right;"><a target="_blank" href="https://github.com/facebook/react-native/blob/master/docs/SignedAPKAndroid.md">Edit on GitHub</a></td></tr></tbody></table><div><p>Android requires that all apps be digitally signed with a certificate before they can be installed, so to distribute your Android application via <a href="https://play.google.com/store" target="_blank">Google Play store</a>, you'll need to generate a signed release APK. The <a href="https://developer.android.com/tools/publishing/app-signing.html" target="_blank">Signing Your Applications</a> page on Android Developers documentation describes the topic in detail. This guide covers the process in brief, as well as lists the steps required to packaging the JavaScript bundle.</p><h3><a class="anchor" name="generating-a-signing-key"></a>Generating a signing key <a class="hash-link" href="docs/signed-apk-android.html#generating-a-signing-key">#</a></h3><p>You can generate a private signing key using <code>keytool</code>.</p><div class="prism language-javascript">$ keytool <span class="token operator">-</span>genkey <span class="token operator">-</span>v <span class="token operator">-</span>keystore my<span class="token operator">-</span>release<span class="token operator">-</span>key<span class="token punctuation">.</span>keystore <span class="token operator">-</span>alias my<span class="token operator">-</span>key<span class="token operator">-</span>alias <span class="token operator">-</span>keyalg RSA <span class="token operator">-</span>keysize <span class="token number">2048</span> <span class="token operator">-</span>validity <span class="token number">10000</span></div><p>This command prompts you for passwords for the keystore and key, and to provide the Distinguished Name fields for your key. It then generates the keystore as a file called <code>my-release-key.keystore</code>.</p><p>The keystore contains a single key, valid for 10000 days. The alias is a name that you will use later when signing your app, so remember to take note of the alias.</p><p><em>Note: Remember to keep your keystore file private and never commit it to version control.</em></p><h3><a class="anchor" name="setting-up-gradle-variables"></a>Setting up gradle variables <a class="hash-link" href="docs/signed-apk-android.html#setting-up-gradle-variables">#</a></h3><ol><li>Place the <code>my-release-key.keystore</code> file under the <code>android/app</code> directory in your project folder.</li><li>Edit the file <code>~/.gradle/gradle.properties</code> and add the following (replace <code>*****</code> with the correct keystore password, alias and key password),</li></ol><div class="prism language-javascript">MYAPP_RELEASE_STORE_FILE<span class="token operator">=</span>my<span class="token operator">-</span>release<span class="token operator">-</span>key<span class="token punctuation">.</span>keystore
MYAPP_RELEASE_KEY_ALIAS<span class="token operator">=</span>my<span class="token operator">-</span>key<span class="token operator">-</span>alias
MYAPP_RELEASE_STORE_PASSWORD<span class="token operator">=</span><span class="token operator">*</span><span class="token operator">*</span><span class="token operator">*</span><span class="token operator">*</span><span class="token operator">*</span>
MYAPP_RELEASE_KEY_PASSWORD<span class="token operator">=</span><span class="token operator">*</span><span class="token operator">*</span><span class="token operator">*</span><span class="token operator">*</span><span class="token operator">*</span></div><p>These are going to be global gradle variables, which we can later use in our gradle config to sign our app.</p><p><em>Note: Once you publish the app on the Play Store, you will need to republish your app under a different package name (losing all downloads and ratings) if you want to change the signing key at any point. So backup your keystore and don't forget the passwords.</em></p><h3><a class="anchor" name="adding-signing-config-to-your-app-s-gradle-config"></a>Adding signing config to your app's gradle config <a class="hash-link" href="docs/signed-apk-android.html#adding-signing-config-to-your-app-s-gradle-config">#</a></h3><p>Edit the file <code>android/app/build.gradle</code> in your project folder and add the signing config,</p><div class="prism language-javascript"><span class="token punctuation">.</span><span class="token punctuation">.</span><span class="token punctuation">.</span>
android <span class="token punctuation">{</span>
    <span class="token punctuation">.</span><span class="token punctuation">.</span><span class="token punctuation">.</span>
    defaultConfig <span class="token punctuation">{</span> <span class="token punctuation">.</span><span class="token punctuation">.</span><span class="token punctuation">.</span> <span class="token punctuation">}</span>
    signingConfigs <span class="token punctuation">{</span>
        release <span class="token punctuation">{</span>
            storeFile <span class="token function">file<span class="token punctuation">(</span></span>MYAPP_RELEASE_STORE_FILE<span class="token punctuation">)</span>
            storePassword MYAPP_RELEASE_STORE_PASSWORD
            keyAlias MYAPP_RELEASE_KEY_ALIAS
            keyPassword MYAPP_RELEASE_KEY_PASSWORD
        <span class="token punctuation">}</span>
    <span class="token punctuation">}</span>
    buildTypes <span class="token punctuation">{</span>
        release <span class="token punctuation">{</span>
            <span class="token punctuation">.</span><span class="token punctuation">.</span><span class="token punctuation">.</span>
            signingConfig signingConfigs<span class="token punctuation">.</span>release
        <span class="token punctuation">}</span>
    <span class="token punctuation">}</span>
<span class="token punctuation">}</span>
<span class="token punctuation">.</span><span class="token punctuation">.</span><span class="token punctuation">.</span></div><h3><a class="anchor" name="generating-the-release-apk"></a>Generating the release APK <a class="hash-link" href="docs/signed-apk-android.html#generating-the-release-apk">#</a></h3><p>Simply run the following in a terminal:</p><div class="prism language-javascript">$ cd android &amp;&amp; <span class="token punctuation">.</span><span class="token operator">/</span>gradlew assembleRelease</div><p>Gradle's <code>assembleRelease</code> will bundle all the JavaScript needed to run your app into the APK. If you need to change the way the JavaScript bundle and/or drawable resources are bundled (e.g. if you changed the default file/folder names or the general structure of the project), have a look at <code>android/app/build.gradle</code> to see how you can update it to reflect these changes.</p><p>The generated APK can be found under <code>android/app/build/outputs/apk/app-release.apk</code>, and is ready to be distributed.</p><h3><a class="anchor" name="testing-the-release-build-of-your-app"></a>Testing the release build of your app <a class="hash-link" href="docs/signed-apk-android.html#testing-the-release-build-of-your-app">#</a></h3><p>Before uploading the release build to the Play Store, make sure you test it thoroughly. Install it on the device using:</p><div class="prism language-javascript">$ cd android &amp;&amp; <span class="token punctuation">.</span><span class="token operator">/</span>gradlew installRelease</div><p>Note that <code>installRelease</code> is only available if you've set up signing as described above.</p><p>You can kill any running packager instances, all your and framework JavaScript code is bundled in the APK's assets.</p><h3><a class="anchor" name="enabling-proguard-to-reduce-the-size-of-the-apk-optional"></a>Enabling Proguard to reduce the size of the APK (optional) <a class="hash-link" href="docs/signed-apk-android.html#enabling-proguard-to-reduce-the-size-of-the-apk-optional">#</a></h3><p>Proguard is a tool that can slightly reduce the size of the APK. It does this by stripping parts of the React Native Java bytecode (and its dependencies) that your app is not using.</p><p><em><strong>IMPORTANT</strong>: Make sure to thoroughly test your app if you've enabled Proguard. Proguard often requires configuration specific to each native library you're using. See <code>app/proguard-rules.pro</code>.</em></p><p>To enable Proguard, edit <code>android/app/build.gradle</code>:</p><div class="prism language-javascript"><span class="token comment" spellcheck="true">/**
 * Run Proguard to shrink the Java bytecode in release builds.
 */</span>
def enableProguardInReleaseBuilds <span class="token operator">=</span> <span class="token boolean">true</span></div></div><div class="docs-prevnext"><a class="docs-next" href="docs/android-ui-performance.html#content">Next →</a></div><div class="survey"><div class="survey-image"></div><p>We are planning improvements to the React Native documentation. Your responses to this short survey will go a long way in helping us provide valuable content. Thank you!</p><center><a class="button" href="https://www.facebook.com/survey?oid=681969738611332">Take Survey</a></center></div>